fixed padding collapsed caused by flexbox, fixed safari overlay width bug.

--- a/elements/pfe-navigation/src/_shared-assets.scss
+++ b/elements/pfe-navigation/src/_shared-assets.scss
@@ -47,9 +47,5 @@ $LOCAL: navigation;
     z-index: 2;
     line-height: 1.1;
 
-    @media screen and (min-width: 1200px) {
-        white-space: nowrap;
-    }
-
     margin: 0 !important;
 }
